--- a/index.html
+++ b/index.html
@@ -16,22 +16,9 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <!-- Begin Inspectlet Embed Code -->
-    <script type="text/javascript" id="inspectletjs">
-      window.__insp = window.__insp || [];
-      __insp.push(['wid', 92785244]);
-      (function() {
-        function __ldinsp(){var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://www.inspectlet.com/inspectlet.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); }
-        if (window.attachEvent){
-          window.attachEvent('onload', __ldinsp);
-        }else{
-          window.addEventListener('load', __ldinsp, false);
-        }
-      })();
-    </script>
-    <!-- End Inspectlet Embed Code -->
+
   </head>
-  <body>
+  <body data-spy="scroll" data-target="nav">
 
   	<div id="top" class="jumbotron">
     	<div class="container">
@@ -47,46 +34,37 @@
 		    </div>
 
     	</div>
-      <a href="#" class="scroll-down">
-        <span class="glyphicon glyphicon-chevron-down"></span>
-      </a>
-	</div> <!--closes top section-->
-  
-  <div> <!--navbar-->
-    <div id="navbar" class="navbar navbar-default">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-          <span class="sr-only">Toggle navication</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+      <div class="row">
+        <a href="#profile" class="scroll-down col-sm-1 col-sm-push-10">
+          <span class="glyphicon glyphicon-chevron-down"></span>
+        </a>
       </div>
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#profile">Profile</a></li>
-            <li><a href="#experiences">Experiences</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="portfolio">Portfolio</a></li>
-            <li><a href="#personal">Personal</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-    </div>
+	</div> <!--closes top section-->
+
+
+  <div class="col-sm-1 col-sm-push-10"> <!--navbar-->
+    <ul id="nav" class="nav hidden-xs scrollspy" data-spy="affix">
+      <li class="active"><a href="#profile">Profile</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#portfolio">Portfolio</a></li>
+      <li><a href="#personal">Personal</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
   </div> <!--end navbar-->
 
-  <div class="background-white"> <!--profile-->
-    <div id="profile" class="container">
+  <div class="background-white container-fluid"> <!--profile-->
+    <div id="profile" class="col-md-10">
       <h1>Profile</h1>
-      <p>I'm an aspiring web developer.</p>
+      <p>I'm an aspiring Web Developer.</p>
       <hr>
       <div class="row">
         <div class="col-md-4">
           <h3>About Me</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui amet sed repudiandae natus aspernatur pariatur obcaecati asperiores, dolore, at modi maiores, nobis consequuntur eaque atque facere commodi ipsam ducimus. Excepturi.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit optio at obcaecati rem, sapiente mollitia fugit, incidunt saepe quaerat, facilis tempora hic consectetur veritatis vitae dolor veniam dolore quidem accusantium.</p>
         </div>
-        <div class="col-md-4 text-center">
-          <img src="images/face_square.jpg" alt="Liah Wallace">
+        <div class="col-md-4">
+          <img src="images/face_square.jpg" alt="Liah D. Wallace">
         </div>
         <div class="col-md-4">
           <h3></h3>
@@ -107,91 +85,132 @@
     </div>
   </div> <!--end profile-->
 
-  <div id="experience" class="container background-neutral">
-    <h1>Experience</h1>
-    <hr>
-    <h3>Education</h3>
-    <div class="experience">
-      <div class="experience row">
-        <div class="col-md-4">
-          <h4>FlatIron School</h4>
-          <p>Dec 2016 - current</p>
-        </div>
-        <div class="col-md-8"><strong>Full Stack Web Development Intensive</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
-        </div>
-      </div>
+  <div class="background-neutral container-fluid">
 
-      <div class="experience row">
-        <div class="col-md-4">
-          <h4>College of Charleston</h4>
-          <p>Jan 2010 - Dec 2012</p>
-        </div>
-        <div class="col-md-8"><strong>Masters in Environmental Studies</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!</div>
-      </div>
-
-      <div class="experience row">
-        <div class="col-md-4">
-          <h4>College of Charleston</h4>
-          <p>Aug 2006 - May 2008</p>
-        </div>
-        <div class="col-md-8"><strong>Bachelors of Science in Marine Biology</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!</div>
-      </div>
-
+    <div id="experience" class="col-md-10"> <!--begin Experience-->
+      <h1>Experience</h1>
       <hr>
+      <h3>Education</h3>
+      <div class="experience">
 
-      <h3>Work</h3>
-    <div class="experience">
-      <div class="experience row">
-        <div class="col-md-4">
-          <h4>Bowhead Science and Technology</h4>
-          <p>Aug 2015 - Nov 2016</p>
+        <div class="experience row">
+          <div class="col-md-4">
+            <h4>FlatIron School</h4>
+            <p>Dec 2016 - current</p>
+          </div>
+          <div class="col-md-8"><strong>Full Stack Web Development Intensive</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
+          </div>
         </div>
-        <div class="col-md-8"><strong>Program Management Analyst III</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
+
+        <div class="experience row">
+          <div class="col-md-4">
+            <h4>College of Charleston</h4>
+            <p>Jan 2010 - Dec 2012</p>
+          </div>
+          <div class="col-md-8"><strong>Masters in Environmental Studies</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!</div>
+        </div>
+
+        <div class="experience row">
+          <div class="col-md-4">
+            <h4>College of Charleston</h4>
+            <p>Aug 2006 - May 2008</p>
+          </div>
+          <div class="col-md-8"><strong>Bachelors of Science in Marine Biology</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!</div>
         </div>
       </div>
 
-      <div class="experience row">
-        <div class="col-md-4">
-          <h4>Bowhead Professional Solutions</h4>
-          <p>Feb 2015 - Aug 2015</p>
-        </div>
-        <div class="col-md-8"><strong>GIS Analyst</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
-        </div>
-      </div>
+        <hr>
 
-      <div class="experience row">
-        <div class="col-md-4">
-          <h4>Skylla Engineering</h4>
-          <p>Aug 2014 - Feb 2015</p>
-        </div>
-        <div class="col-md-8"><strong>Management Analyst II</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
-        </div>
-      </div>
+        <h3>Work</h3>
+      <div class="experience">
 
-      <div class="experience row">
-        <div class="col-md-4">
-          <h4>SAIC</h4>
-          <p>Jan 2009 - Aug 2014</p>
+        <div class="experience row">
+          <div class="col-md-4">
+            <h4>Bowhead Science and Technology</h4>
+            <p>Aug 2015 - Nov 2016</p>
+          </div>
+          <div class="col-md-8"><strong>Program Management Analyst III</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
+          </div>
         </div>
-        <div class="col-md-8"><strong>Project Analyst / Deployment Coordinator</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
-        </div>
-      </div>
 
-      <div class="experience row">
-        <div class="col-md-4">
-          <h4>College of Charleston</h4>
-          <p>Aug 2011 - May 2012</p>
+        <div class="experience row">
+          <div class="col-md-4">
+            <h4>Bowhead Professional Solutions</h4>
+            <p>Feb 2015 - Aug 2015</p>
+          </div>
+          <div class="col-md-8"><strong>GIS Analyst</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
+          </div>
         </div>
-        <div class="col-md-8"><strong>Graduate Assistant</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
-        </div>
-      </div>
 
+        <div class="experience row">
+          <div class="col-md-4">
+            <h4>Skylla Engineering</h4>
+            <p>Aug 2014 - Feb 2015</p>
+          </div>
+          <div class="col-md-8"><strong>Management Analyst II</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
+          </div>
+        </div>
+
+        <div class="experience row">
+          <div class="col-md-4">
+            <h4>SAIC</h4>
+            <p>Jan 2009 - Aug 2014</p>
+          </div>
+          <div class="col-md-8"><strong>Project Analyst / Deployment Coordinator</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
+          </div>
+        </div>
+
+        <div class="experience row">
+          <div class="col-md-4">
+            <h4>College of Charleston</h4>
+            <p>Aug 2011 - May 2012</p>
+          </div>
+          <div class="col-md-8"><strong>Graduate Assistant</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
+          </div>
+        </div>
+
+      </div>
     </div>
   </div>
+
+  <div class="background-white container-fluid">
+    <div id="skills" class="col-md-10">
+      <h1>Skills</h1>
+      <hr>
+    </div>
+  </div>
+
+    <div class="background-neutral container-fluid">
+      <div id="portfolio" class="col-md-10">
+        <h1>Portfolio</h1>
+        <hr>
+      </div>
+    </div>
+
+    <div class="background-white container-fluid">
+      <div id="personal" class="col-md-10">
+        <h1>Personal Info</h1>
+        <hr>
+      </div>
+    </div>
+
+    <div class="background-neutral container-fluid">
+      <div id="contact" class="col-md-10">
+        <h1>Contact</h1>
+        <hr>
+    </div>
+  </div>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript">$('body').scrollspy({ target: '#navbar-example' })</script>
+    <script type="text/javascript">$('#nav').affix({
+    offset: {
+        top: $('#nav').offset().top
+    }
+});</script>
   </body>
 </html>
