--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Liah D. Wallace - Web Developer - Interactive Resume</title>
-	  
+
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-social.css" rel="stylesheet">
+    <link href="css/font-awesome.css" rel="stylesheet">
 	  <link href="css/style.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -39,11 +41,12 @@
   			<h3>I'm an aspiring Web Developer.</h3>
   			<p>When I'm not coding, I'm having a blast rock climbing, traveling, or having a beer with the best pals a girl could ask for.</p>
 
-			   <div id="social">
-		      <a class="fbook" href="#" title="Facebook">Facebook</a>
-		      <a class="intsa" href="#" title="Instagram">Instagram</a>
-		      <a class="github" href="#" title="GitHub">GitHub</a>
-		      <a class="blog" href="" title="Blog">Blog</a>
+			   <div class="social">
+		      <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/liah.baker.73" title="Facebook" target="_blank" ><span class="fa fa-facebook"></span></a>
+		      <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/liahwalrus/" title="Instagram" target="_blank" ><i class="fa fa-instagram"></i></a>
+		      <a class="btn btn-social-icon btn-github" href="https://github.com/liahwallace1" title="GitHub" target="_blank" ><i class="fa fa-github"></i></a>
+          <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/liah-wallace/" title="LinkedIn" target="_blank" ><i class="fa fa-linkedin"></i></a>
+		      <a class="btn btn-social-icon btn-flickr" href="http://liahdwallace.com/" title="Blog" target="_blank">Blog</a>
 		    </div>
 
     	</div>
@@ -51,7 +54,7 @@
         <span class="glyphicon glyphicon-chevron-down"></span>
       </a>
 	</div> <!--closes top section-->
-  
+
   <div> <!--navbar-->
     <div id="navbar" class="navbar navbar-default">
       <div class="navbar-header">
@@ -83,7 +86,7 @@
       <div class="row">
         <div class="col-md-4">
           <h3>About Me</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui amet sed repudiandae natus aspernatur pariatur obcaecati asperiores, dolore, at modi maiores, nobis consequuntur eaque atque facere commodi ipsam ducimus. Excepturi.</p>
+          <p>I recently graduated from the Flatiron School’s online 800+ hour Full Stack Web Development Immersive. With a solid foundation in Ruby, Rails, and JavaScript, I am excited to enter the professional world as a junior developer and expand my growing code knowledge while working in a team of developers.</p>
         </div>
         <div class="col-md-4 text-center">
           <img src="images/face_square.jpg" alt="Liah Wallace">
@@ -93,14 +96,17 @@
           <p><strong>Name:</strong></p>
           <p>Liah D. Wallace</p>
           <p><strong>Age:</strong></p>
-          <p>30 years</p>
+          <p>31 years</p>
           <p><strong>Location:</strong></p>
           <p>Charleston, SC, USA</p>
           <div id="social">
-            <a class="fbook" href="#" title="Facebook">Facebook</a>
-            <a class="intsa" href="#" title="Instagram">Instagram</a>
-            <a class="github" href="#" title="GitHub">GitHub</a>
-            <a class="blog" href="" title="Blog">Blog</a>
+            <div class="social">
+   		      <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/liah.baker.73" title="Facebook" target="_blank" ><span class="fa fa-facebook"></span></a>
+   		      <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/liahwalrus/" title="Instagram" target="_blank" ><i class="fa fa-instagram"></i></a>
+   		      <a class="btn btn-social-icon btn-github" href="https://github.com/liahwallace1" title="GitHub" target="_blank" ><i class="fa fa-github"></i></a>
+             <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/liah-wallace/" title="LinkedIn" target="_blank" ><i class="fa fa-linkedin"></i></a>
+   		      <a class="btn btn-social-icon btn-flickr" href="http://liahdwallace.com/" title="Blog" target="_blank">Blog</a>
+   		    </div>
           </div>
         </div>
       </div>
