Updated experience content

--- a/index.html
+++ b/index.html
@@ -121,9 +121,16 @@
       <div class="experience row">
         <div class="col-md-4">
           <h4>FlatIron School</h4>
-          <p>Dec 2016 - current</p>
+          <p>Dec 2016 - July 2017</p>
         </div>
-        <div class="col-md-8"><strong>Full Stack Web Development Intensive</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
+        <div class="col-md-8"><strong>800+ Hour Full Stack Web Development Intensive</strong><br>
+          <ul>
+            <li>Utilized professional development tools while completing online test-driven curriculum.</li>
+            <li>Set up a local development environment and independently troubleshoots unexpected errors.</li>
+              <li>Used a Git-based workflow for version control.</li>
+              <li>Hosted 422 open repositories on GitHub (and counting).</li>
+              <li>Collaborated with peers in real time using Slack and gains experience with peer-programming on large projects.</li>
+          </ul>
         </div>
       </div>
 
@@ -132,7 +139,13 @@
           <h4>College of Charleston</h4>
           <p>Jan 2010 - Dec 2012</p>
         </div>
-        <div class="col-md-8"><strong>Masters in Environmental Studies</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!</div>
+        <div class="col-md-8"><strong>Masters in Environmental Studies</strong><br>
+          <ul>
+            <li>Graduate Assistantship for Participatory GIS research</li>
+            <li>Completed thesis project, “Developing Participatory GIS Methods for Coastal Environmental Planning”</li>
+            <li>Completed coursework in GIS, Advanced GIS, and Remote Sensing in addition to interdisciplinary environmental studies courses</li>
+          </ul>
+        </div>
       </div>
 
       <div class="experience row">
@@ -140,7 +153,13 @@
           <h4>College of Charleston</h4>
           <p>Aug 2006 - May 2008</p>
         </div>
-        <div class="col-md-8"><strong>Bachelors of Science in Marine Biology</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!</div>
+        <div class="col-md-8"><strong>Bachelors of Science in Marine Biology</strong><br>
+          <ul>
+            <li>Minor in Environmental Studies</li>
+            <li>Graduated Summa cum Laude</li>
+            <li>Member of Phi Kappa Phi</li>
+            <li>Awards: Academic Achievement Scholarship, Outstanding Student Award in Marine Biology, Highly Distinguished honor several semesters</li>
+        </div>
       </div>
 
       <hr>
@@ -152,7 +171,12 @@
           <h4>Bowhead Science and Technology</h4>
           <p>Aug 2015 - Nov 2016</p>
         </div>
-        <div class="col-md-8"><strong>Program Management Analyst III</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
+        <div class="col-md-8"><strong>Program Management Analyst III</strong><br>
+          <ul>
+            <li>Prepared documents, infographics, and presentations to market and explain complex computer engineering projects to Marine Corps Headquarters financial sponsors.</li>
+            <li>Coordinated product demonstration visits from financial sponsors.</li>
+            <li>Provided Supply Chain Management support and conducted inventory, which account for over 20,000 government parts.</li>
+          </ul>
         </div>
       </div>
 
@@ -161,7 +185,11 @@
           <h4>Bowhead Professional Solutions</h4>
           <p>Feb 2015 - Aug 2015</p>
         </div>
-        <div class="col-md-8"><strong>GIS Analyst</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
+        <div class="col-md-8"><strong>GIS Analyst</strong><br>
+          <ul>
+            <li>Provided GIS services related to the creation, collection, maintenance, quality assurance, and integration of the U.S. Army Corps of Engineers Charleston District's geospatial datasets.</li>
+            <li>Projects required disciplines such as: GPS-GIS format, conversion, hydrographic/topographic quality assurance, real estate digitalization, map production, data entry and data extraction, maintain and develop Standard Operational Procedure's (SOPs), and digital imagery processing.</li>
+          </ul>
         </div>
       </div>
 
@@ -170,7 +198,12 @@
           <h4>Skylla Engineering</h4>
           <p>Aug 2014 - Feb 2015</p>
         </div>
-        <div class="col-md-8"><strong>Management Analyst II</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
+        <div class="col-md-8"><strong>Management Analyst II</strong><br>
+          <ul>
+            <li>Prepared analytic reports on logistic activity in support of the Total Integrated Ground Equipment Readiness (TIGER) Contractor Logistic Support (CLS) Program.</li>
+            <li>Assisted in development of the TIGER-CLS Spares Inventory Management monthly reports template, which shows trends and cost benefits or loss over the report period.</li>
+            <li>Conducted inventory reconciliation for 13 Marine Corps Intelligence programs.</li>
+          </ul>
         </div>
       </div>
 
@@ -179,7 +212,12 @@
           <h4>SAIC</h4>
           <p>Jan 2009 - Aug 2014</p>
         </div>
-        <div class="col-md-8"><strong>Project Analyst / Deployment Coordinator</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
+        <div class="col-md-8"><strong>Project Analyst / Deployment Coordinator</strong><br>
+          <ul>
+            <li>Coordinated deployment processing for over 200 contractor and government personnel traveling to hostile and non-hostile destinations worldwide for 14 SPAWAR projects supporting the U.S. Marine Corps.</li>
+            <li>Provided staffing and CAC support to CONUS contractor personnel supporting the TIGER CLS project.</li>
+            <li>Received a Recognition of Performance and Service Award from SAIC for performance and dedication during FY2011 and FY2013.</li>
+          </ul>
         </div>
       </div>
 
@@ -188,7 +226,11 @@
           <h4>College of Charleston</h4>
           <p>Aug 2011 - May 2012</p>
         </div>
-        <div class="col-md-8"><strong>Graduate Assistant</strong><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, aspernatur vel totam, accusantium quae facere nisi iusto! Et perspiciatis corrupti itaque nihil illo quam recusandae. Illo voluptatem, ad blanditiis at!
+        <div class="col-md-8"><strong>Graduate Assistant</strong><br>
+          <ul>
+            <li>Conducted research related to master's thesis and additional related studies being conducted by thesis advisor. </li>
+            <li>Research related to Participatory GIS, social ecological resilience theory, commercial and recreational fishing practices, and effects of in-migration and amenity migration on local communities.</li>
+          </ul>
         </div>
       </div>
 
