edited navigation, added projects section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   	<div id="top" class="jumbotron">
     	<div class="container">
     		<h1>Hi! I'm Liah!</h1>
-  			<h3>I'm an aspiring Web Developer.</h3>
+  			<h3>I'm a Full Stack Web Developer.</h3>
   			<p>When I'm not coding, I'm having a blast rock climbing, traveling, or having a beer with the best pals a girl could ask for.</p>
 
 			   <div class="social">
@@ -53,67 +53,66 @@
       <a href="#" class="scroll-down">
         <span class="glyphicon glyphicon-chevron-down"></span>
       </a>
-	</div> <!--closes top section-->
+	   </div> <!--closes top section-->
 
-  <div> <!--navbar-->
-    <div id="navbar" class="navbar navbar-default">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-          <span class="sr-only">Toggle navication</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+    <div> <!--navbar-->
+      <div id="navbar" class="navbar navbar-default">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+          <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#profile">Profile</a></li>
+              <li><a href="#experience">Experience</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#personal">Personal</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div>
       </div>
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#profile">Profile</a></li>
-            <li><a href="#experiences">Experiences</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="portfolio">Portfolio</a></li>
-            <li><a href="#personal">Personal</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-    </div>
-  </div> <!--end navbar-->
+    </div> <!--end navbar-->
 
-  <div class="background-white"> <!--profile-->
-    <div id="profile" class="container">
-      <h1>Profile</h1>
-      <p>I'm an aspiring web developer.</p>
-      <hr>
-      <div class="row">
-        <div class="col-md-4">
-          <h3>About Me</h3>
-          <p>I recently graduated from the Flatiron School’s online 800+ hour Full Stack Web Development Immersive. With a solid foundation in Ruby, Rails, and JavaScript, I am excited to enter the professional world as a junior developer and expand my growing code knowledge while working in a team of developers.</p>
-        </div>
-        <div class="col-md-4 text-center">
-          <img src="images/face_square.jpg" alt="Liah Wallace">
-        </div>
-        <div class="col-md-4">
-          <h3></h3>
-          <p><strong>Name:</strong></p>
-          <p>Liah D. Wallace</p>
-          <p><strong>Age:</strong></p>
-          <p>31 years</p>
-          <p><strong>Location:</strong></p>
-          <p>Charleston, SC, USA</p>
-          <div id="social">
-            <div class="social">
-   		      <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/liah.baker.73" title="Facebook" target="_blank" ><span class="fa fa-facebook"></span></a>
-   		      <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/liahwalrus/" title="Instagram" target="_blank" ><i class="fa fa-instagram"></i></a>
-   		      <a class="btn btn-social-icon btn-github" href="https://github.com/liahwallace1" title="GitHub" target="_blank" ><i class="fa fa-github"></i></a>
-             <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/liah-wallace/" title="LinkedIn" target="_blank" ><i class="fa fa-linkedin"></i></a>
-   		      <a class="btn btn-social-icon btn-flickr" href="http://liahdwallace.com/" title="Blog" target="_blank">Blog</a>
-   		    </div>
+    <div class="background-white"> <!--profile-->
+      <div id="profile" class="container">
+        <h1>Profile</h1>
+        <p>I'm an aspiring web developer.</p>
+        <hr>
+        <div class="row">
+          <div class="col-md-4">
+            <h3>About Me</h3>
+            <p>I recently graduated from the Flatiron School’s online 800+ hour Full Stack Web Development Immersive. With a solid foundation in Ruby, Rails, JavaScript, and React, I am excited to enter the professional world as a developer and expand my growing code knowledge while working in a team of developers. For more about me, check out the personal section!</p>
+          </div>
+          <div class="col-md-4 text-center">
+            <img src="images/face_square.jpg" alt="Liah Wallace">
+          </div>
+          <div class="col-md-4">
+            <h3></h3>
+            <p><strong>Name:</strong></p>
+            <p>Liah D. Wallace</p>
+            <p><strong>Age:</strong></p>
+            <p>31 years</p>
+            <p><strong>Location:</strong></p>
+            <p>Charleston, SC, USA</p>
+            <div id="social">
+              <div class="social">
+     		      <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/liah.baker.73" title="Facebook" target="_blank" ><span class="fa fa-facebook"></span></a>
+     		      <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/liahwalrus/" title="Instagram" target="_blank" ><i class="fa fa-instagram"></i></a>
+     		      <a class="btn btn-social-icon btn-github" href="https://github.com/liahwallace1" title="GitHub" target="_blank" ><i class="fa fa-github"></i></a>
+               <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/liah-wallace/" title="LinkedIn" target="_blank" ><i class="fa fa-linkedin"></i></a>
+     		      <a class="btn btn-social-icon btn-flickr" href="http://liahdwallace.com/" title="Blog" target="_blank">Blog</a>
+     		    </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div> <!--end profile-->
+    </div> <!--end profile-->
 
-  <div id="experience" class="container background-neutral">
+    <div id="experience" class="container background-neutral">
     <h1>Experience</h1>
     <hr>
     <h3>Education</h3>
@@ -161,11 +160,25 @@
             <li>Awards: Academic Achievement Scholarship, Outstanding Student Award in Marine Biology, Highly Distinguished honor several semesters</li>
         </div>
       </div>
+    </div>
 
-      <hr>
+      <hr />
 
-      <h3>Work</h3>
+    <h3>Work</h3>
     <div class="experience">
+      <div class="experience row">
+        <div class="col-md-4">
+          <h4>Flatiron School</h4>
+          <p>Jul 2017 - present</p>
+        </div>
+        <div class="col-md-8"><strong>Learn.co Technical Coach</strong><br>
+          <ul>
+            <li>Assist online web development students troubleshoot assignments, learn coding concepts, and fix environment issues.</li>
+            <li>Improve student experience and outcomes by identifying trends in questions and contributing to open-source curriculum.</li>
+          </ul>
+        </div>
+      </div>
+
       <div class="experience row">
         <div class="col-md-4">
           <h4>Bowhead Science and Technology</h4>
@@ -233,13 +246,21 @@
           </ul>
         </div>
       </div>
-
     </div>
-  </div>
+  </div>  <!--end experience-->
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <div class="background-white"> <!--portfolio-->
+      <div id="projects" class="container">
+        <h1>My Projects</h1>
+
+      </div>
+    </div> <!--end portfolio-->
+
+
+      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+      <!-- Include all compiled plugins (below), or include individual files as needed -->
+      <script src="js/bootstrap.min.js"></script>
+
   </body>
 </html>
