Added info to projects

--- a/index.html
+++ b/index.html
@@ -252,7 +252,19 @@
     <div class="background-white"> <!--portfolio-->
       <div id="projects" class="container">
         <h1>My Projects</h1>
-
+          <div class="col-md-6 project">
+            <a href="https://chs-lunch-finder.herokuapp.com/"><img class="project-img" src="images/what-for-lunch-img.png" alt="What's For Lunch Charleston"></a>
+            <a href="https://chs-lunch-finder.herokuapp.com/"><h3>What's For Lunch Charleston</h3></a>
+            <p>Trying to pick a lunch spot with your coworkers and can't decide? This single page site allows you to browse lunch options in Charleston or get a quick restaurant suggestion.<p>
+            <ul>
+              <li>Built single-page app using React.js and Ruby on Rails API</li>
+              <li>Utilized data from Yelp Fusion API, routing calls through the Rails back end</li>
+              <li>Designed fun but functional front-end using Semantic UI and custom CSS</li>
+              <li>Used React.js to design front end components and Redux to manage state</li>
+            </ul>
+            Github (<a href="https://github.com/liahwallace1/chs-lunch-finder-api">api</a>/<a href="https://github.com/liahwallace1/chs-lunch-finder-client">client</a>)
+            <a href="https://youtu.be/KPn0YVT5bdc">Demo</a>
+          </div>
       </div>
     </div> <!--end portfolio-->
 
